--- a/css/class-8-styles.css
+++ b/css/class-8-styles.css
@@ -11,8 +11,11 @@ body {
 
 .header {
     padding: 10px;
+    font-size: 30px;
     display: flex;
+    height: 60px;
     justify-content: space-between;
+    align-items: center;
     color: white;
     background-color: #2c2f52;
     background-image:  radial-gradient(#faebd7 0.8px, transparent 0.8px), radial-gradient(#faebd7 0.8px, #2c2f52 0.8px);
@@ -27,7 +30,7 @@ body {
 
 .header ul li {
     list-style-type: none;
-    margin-left: 10px;
+    margin-left: 25px;
 }
 
 .header ul li a{
@@ -50,10 +53,11 @@ body {
 
 .grid-container div p {
     margin: 10px;
+    font-size: 40px;
 }
 
 .grid-container div.border {
-    border: 2px solid tomato;
+    border: 5px solid tomato;
 }
 
 .grid-container div p span{
@@ -64,9 +68,60 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: all ease-in-out 0.5s;
+}
+
+.grid-container div img:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 0px 232px 53px rgba(204,204,204,1);
+    -webkit-box-shadow: 0px 0px 232px 53px rgba(204,204,204,1);
+    -moz-box-shadow: 0px 0px 232px 53px rgba(204,204,204,1);
 }
 
 .grid-container div:first-child {
     grid-row: 1 / span 2;
     grid-column: 1 / span 2;
+}
+
+@media screen and (min-width: 600px) and (max-width: 991px){
+    .grid-container {
+        grid-template-rows: repeat(6, auto);
+        grid-template-columns: repeat(2, auto);
+        gap: 8px;
+    }
+    .grid-container div:first-child {
+        grid-row: 1;
+        grid-column: 1;
+    }
+}
+
+@media screen and (max-width: 599px){
+    .header {
+        font-size: 20px;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .header div:first-child{
+        margin-bottom: 15px;
+        text-align: start;
+    }
+    .header div:nth-child(2) {
+        width: 100%;
+    }
+    .header ul {
+        padding: 0;
+        justify-content: space-between;
+    }
+    .header ul li{
+        margin: 0;
+    }
+    .grid-container {
+        grid-template-rows: repeat(12, auto);
+        grid-template-columns: 1fr;
+        gap: 8px;
+    }
+    .grid-container div:first-child {
+        grid-row: 1;
+        grid-column: 1;
+    }
 }
